--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Login Page</ion-title>
+    <ion-title>Login</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -24,9 +24,9 @@
   
     
     <ion-button expand="block" color="success"  (click)="testclase()" fill="outline">{{textBtn}}</ion-button> 
-    <ion-button expand="block" color="success"  [routerLink]="['/home']" fill="outline">Nav RouiterLink</ion-button> 
+    <ion-button expand="block" color="success"  [routerLink]="['/home-profesor']" fill="outline">Ingresar</ion-button> 
 
   </form>
   
 
-</ion-content>+
+</ion-content>
