--- a/src/app/perfilprofesor/perfilprofesor.page.html
+++ b/src/app/perfilprofesor/perfilprofesor.page.html
@@ -21,17 +21,17 @@
     <ion-card-content>
       <ion-item>
         <ion-label>Nombre:</ion-label>
-        <ion-text> Alejandro Valdivia </ion-text>
+        <ion-text> Diego Cares </ion-text>
       </ion-item>
 
       <ion-item>
         <ion-label>Rut:</ion-label>
-        <ion-text> 20.904.717-9 </ion-text>
+        <ion-text> 99.999.999-9 </ion-text>
       </ion-item>
 
       <ion-item>
         <ion-label>Especialidad:</ion-label>
-        <ion-text> Ing en informatica </ion-text>
+        <ion-text> Programacion </ion-text>
       </ion-item>
 
     </ion-card-content>
