--- a/src/app/home-profesor/home-profesor.page.html
+++ b/src/app/home-profesor/home-profesor.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Bienvenido {{userHome}}
+      Bienvenido Profesor
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -13,50 +13,45 @@
         <ion-avatar slot="start">
           <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
         </ion-avatar>
-        <ion-label> Alejandro </ion-label>
+        <ion-label> Profesor </ion-label>
       </ion-item>
     </ion-toolbar>
   </ion-header>
 
-  <ion-item color="light" button routerLink="/perfil">
+  <ion-item color="medium" button routerLink="/perfilprofesor">
     <ion-label>
       <h3>Perfil</h3>
       <p>Consulta tu Perfil</p>
     </ion-label>
   </ion-item>
   
-  <ion-item color="medium" button>
+  <ion-item color="light" button routerLink="/home-profesor">
     <ion-label>
-      <h3>QR</h3>
-      <p>Escanea QR para confirmar asistencia</p>
+      <h3>Horas</h3>
+      <p>Consulta tus horas mensuales</p>
+    </ion-label>
+  </ion-item>
+  
+  <ion-item color="medium" button routerLink="/home-profesor">
+    <ion-label>
+      <h3>Evaluaciones</h3>
+      <p>Consulta las evaluaciones de tus clases</p>
+    </ion-label>
+  </ion-item>
+  
+  <ion-item color="light" button routerLink="/cursos">
+    <ion-label>
+      <h3>Cursos</h3>
+      <p>Consulta los cursos que tienes este semestre</p>
     </ion-label>
   </ion-item>
 
-  <ion-item color="light" button routerLink="/asistencia">
-    <ion-label>
-      <h3>Asistencia</h3>
-      <p>Consulta tu asistencia</p>
-    </ion-label>
-  </ion-item>
-  
-  <ion-item color="medium" button routerLink="/notas">
-    <ion-label>
-      <h3>Notas</h3>
-      <p>Consulta tus notas</p>
-    </ion-label>
-  </ion-item>
-  
-  <ion-item color="light" button routerLink="/Ramos">
-    <ion-label>
-      <h3>Ramos</h3>
-      <p>Consulta los ramos que tienes este semestre</p>
-    </ion-label>
-  </ion-item>
-  
+
+  <ion-footer>
   <ion-item color="medium" button routerLink="/Ayuda">
     <ion-label>
       <h3>Ayuda</h3>
       <p>Pide ayuda sobre cualquier problema</p>
-      <p>Certificados</p>
     </ion-label>
   </ion-item>
+</ion-footer> 
