--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -46,7 +46,7 @@
     </ion-label>
   </ion-item>
   
-  <ion-item color="light" button routerLink="/Ramos">
+  <ion-item color="light" button routerLink="/ramos">
     <ion-label>
       <h3>Ramos</h3>
       <p>Consulta los ramos que tienes este semestre</p>
