--- a/src/app/ramos/ramos.page.html
+++ b/src/app/ramos/ramos.page.html
@@ -1,13 +1,37 @@
+<ion-content [fullscreen]="true">
+  <ion-header>
+    <ion-toolbar>
+      <ion-item>
+        <ion-avatar slot="start">
+          <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+        </ion-avatar>
+        <ion-label> Alejandro Valdivia </ion-label>
+      </ion-item>
+    </ion-toolbar>
+  </ion-header>
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Ramos</ion-title>
+    <ion-title>Ramos semestrales</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Ramos</ion-title>
-    </ion-toolbar>
-  </ion-header>
-</ion-content>
+<ion-item color="medium" button>
+  <ion-label>
+    <h3>Programacion de apps moviles</h3>
+    <p>Profesor(a): Diego Cares</p>
+  </ion-label>
+</ion-item>
+
+<ion-item color="Light" button>
+  <ion-label>
+    <h3>Machine Learning</h3>
+    <p>Profesor(a): Paulette Reyes</p>
+  </ion-label>
+</ion-item>
+
+<ion-item color="medium" button>
+  <ion-label>
+    <h3>Etica laboral</h3>
+    <p>Profesor(a): Diego Pena</p>
+  </ion-label>
+</ion-item>
