--- a/src/app/cursos/cursos.page.html
+++ b/src/app/cursos/cursos.page.html
@@ -1,8 +1,12 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Cursos este semestre</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/home-profesor"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Cursos </ion-title>
   </ion-toolbar>
 </ion-header>
+
 
 <ion-content [fullscreen]="true">
   <ion-header>
