--- a/src/app/notas/notas.page.html
+++ b/src/app/notas/notas.page.html
@@ -8,13 +8,15 @@
         <ion-label> Alejandro Valdivia </ion-label>
       </ion-item>
     </ion-toolbar>
-  </ion-header>
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>Notas</ion-title>
-  </ion-toolbar>
-</ion-header>
-
+    <ion-header [translucent]="true">
+      <ion-toolbar>
+        <ion-buttons slot="start">
+          <ion-back-button defaultHref="/home"></ion-back-button>
+        </ion-buttons>
+        <ion-title>Notas </ion-title>
+      </ion-toolbar>
+    </ion-header>
+    
 <ion-item color="medium" button>
   <ion-label>
     <h3>Programacion de apps moviles</h3>
