--- a/src/app/ramos/ramos.page.html
+++ b/src/app/ramos/ramos.page.html
@@ -9,11 +9,14 @@
       </ion-item>
     </ion-toolbar>
   </ion-header>
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>Ramos semestrales</ion-title>
-  </ion-toolbar>
-</ion-header>
+  <ion-header [translucent]="true">
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-back-button defaultHref="/home"></ion-back-button>
+      </ion-buttons>
+      <ion-title>Ramos </ion-title>
+    </ion-toolbar>
+  </ion-header>
 
 <ion-item color="medium" button>
   <ion-label>
