--- a/src/app/home-profesor/home-profesor.page.html
+++ b/src/app/home-profesor/home-profesor.page.html
@@ -13,7 +13,7 @@
         <ion-avatar slot="start">
           <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
         </ion-avatar>
-        <ion-label> Profesor </ion-label>
+        <ion-label> Diego Cares </ion-label>
       </ion-item>
     </ion-toolbar>
   </ion-header>
