--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -25,7 +25,7 @@
     </ion-label>
   </ion-item>
   
-  <ion-item color="medium" button>
+  <ion-item color="medium" button routerLink="/lectorqr">
     <ion-label>
       <h3>QR</h3>
       <p>Escanea QR para confirmar asistencia</p>
