--- a/src/app/perfilprofesor/perfilprofesor.page.html
+++ b/src/app/perfilprofesor/perfilprofesor.page.html
@@ -1,6 +1,9 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Perfil</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/home-profesor"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Perfil profesor</ion-title>
   </ion-toolbar>
 </ion-header>
 
